--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "nanoid": "^4.0.2",
-    "validator": "^13.9.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "url": "^0.11.4",
+    "validator": "^13.9.0"
   }
 }
