--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.8",
     "body-parser": "^1.20.3",
     "nanoid": "^4.0.2",
     "next": "13.4.9",
     "next-connect": "^1.0.0",
+    "node-fetch": "^2.7.0",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
