--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.7.8",
     "body-parser": "^1.20.3",
+    "formidable": "^3.5.2",
     "nanoid": "^4.0.2",
     "next": "13.4.9",
     "next-connect": "^1.0.0",
