--- a/sample-amplify.yml
+++ b/sample-amplify.yml
@@ -3,16 +3,20 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm ci --cache .npm --prefer-offline
+        - npm ci
     build:
       commands:
-        - printenv | grep -e GRAPHQL_ENDPOINT -e GRAPHQL_KEY >> .env.production
         - npm run build
   artifacts:
-    baseDirectory: .next
+    baseDirectory: out
     files:
-      - "**/*"
+      - '**/*'
   cache:
     paths:
-      - .next/cache/**/*
-      - .npm/**/*
+      - node_modules/**/*
+  environment:
+    variables:
+      GRAPHQL_ENDPOINT: $GRAPHQL_ENDPOINT
+      GRAPHQL_KEY: $GRAPHQL_KEY
+      TURNSTILE_SECRET_KEY: $TURNSTILE_SECRET_KEY
+      NEXT_PUBLIC_TURNSTILE_SITE_KEY: $NEXT_PUBLIC_TURNSTILE_SITE_KEY
