--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/api-graphql": "^4.6.5",
+    "@fingerprintjs/fingerprintjs-pro": "^3.11.4",
     "autoprefixer": "10.4.14",
+    "aws-amplify": "^6.10.2",
     "axios": "^1.7.8",
     "body-parser": "^1.20.3",
     "formidable": "^3.5.2",
